<resources>
    <string name="app_name">Corner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Team">Team</string>
    <string name="Scoreboard">Scoreboard</string>
    <string name="Settings">Settings</string>
    <string name="Standing">Standing</string>
    <string name="News">News</string>
    <string name="match_date_example">22/08</string>
    <string name="match_date_short">22.08</string>
    <string name="match_hour">18:00</string>
    <string name="default_score">2–1</string>
    <string name="dash">-</string>
    <string name="description_example">"Lionel Messi scored two goals, including the 6,000th for Barcelona in La Liga, to lead the reigning champions past Alaves in their season opener. Lionel Messi scored his 6000th goal in La Liga history, as Barcelona put away Alaves 3–0. Craig Burley and Paul Mariner make their predictions for the La Liga season, and one of them is backing Diego Costa for a big season. BARCELONA –- Lionel Messi put World Cup disappointment with Argentina behind him to kick off the new season with a bang, scoring twice in Barcelona's 3-0 win against Alaves at Camp Nou on Saturday. Messi scored twice, with Philippe Coutinho also on target, as well as hitting the woodwork two times and creating gilt-edged chances for teammates Ousmane Dembele and Luis Suarez. The forward's first goal, Barca's 6,000th in La Liga (he also scored their 5,000th in 2009) was delivered under the Alaves..."</string>
    <string name="nationality">Nationality</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="info_sizes">Height/weight</string>
    <string name="position">Position</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est. Etiam sit amet lectus quis est congue mollis. Phasellus congue lacus eget neque. Phasellus ornare, ante vitae consectetuer consequat, purus sapien ultricies dolor, et mollis pede metus eget nisi. Praesent sodales velit quis augue. Cras suscipit, urna at aliquam rhoncus, urna quam viverra nisi, in interdum massa nibh nec erat.</string>
    <string name="club">Club</string>
    <string name="p">P</string>
    <string name="l">L</string>
    <string name="d">D</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">+/-</string>
    <string name="pts">Pts</string>
    <string name="w">W</string>
    <string name="choose_team_you_would_like_to_see">Choose team you would like to see</string>
    <string name="fc_barcelona">FC Barcelona</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="arsenal_london">Arsenal London</string>
    <string name="chelsea_london">Chelsea London</string>
    <string name="bayern_munich">Bayern Munich</string>
    <string name="liverpool">Liverpool</string>
    <string name="manchester_united">Manchester United</string>
    <string name="manchester_city">Manchester City</string>
    <string name="atletico_madrid">Atletico Madrid</string>
    <string name="juventus_turin">Juventus Turin</string>
    <string name="psg">Paris Saint Germain</string>
    <string name="switch_team">Switch team</string>
    <string name="favourite_team">Favourite team</string>
    <string name="double_back_pressed">Press back again to leave</string>
    <string name="choose_club">Choose your favourite club. It will be default team everytime app starts.</string>
    <string name="click_to_choose_club">Click to choose club</string>
</resources>
