<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ball"
        android:title="@string/News" />

    <item
        android:id="@+id/navigation_team"
        android:icon="@drawable/jersey"
        android:title="@string/Team" />

    <item
        android:id="@+id/navigation_scoreboard"
        android:icon="@drawable/scoreboard"
        android:title="@string/Scoreboard" />

    <item
        android:id="@+id/navigation_standing"
        android:icon="@drawable/pitch"
        android:title="@string/Standing"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/Settings"/>

</menu>
