<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_general">


        <TextView
            android:id="@+id/position"
            style="@style/Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:layout_marginStart="@dimen/margin_general"
            android:text="@string/club"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/played"
            style="@style/Standing_description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:text="@string/p"
            app:layout_constraintRight_toLeftOf="@id/won"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/won"
            style="@style/Standing_description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:text="@string/w"
            app:layout_constraintRight_toLeftOf="@id/drown"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/drown"
            style="@style/Standing_description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:text="@string/d"
            app:layout_constraintRight_toLeftOf="@id/lost"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lost"
            style="@style/Standing_description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:text="@string/l"
            app:layout_constraintRight_toLeftOf="@id/goals_for"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goals_for"
            style="@style/Standing_description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:text="@string/gf"
            app:layout_constraintRight_toLeftOf="@id/goals_against"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goals_against"
            style="@style/Standing_description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:text="@string/ga"
            app:layout_constraintRight_toLeftOf="@id/goals_difference"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goals_difference"
            style="@style/Standing_description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:text="@string/gd"
            app:layout_constraintRight_toLeftOf="@id/points"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/points"
            style="@style/Standing_description"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:text="@string/pts"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/standing_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/position" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>