<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_settings">

        <androidx.cardview.widget.CardView
            android:id="@+id/club_choose_cardview"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="@dimen/elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/club_choose"
                    style="@style/Text.ExtraLarge.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_team"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/club_choose_button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_smallish"
                    app:layout_constraintTop_toBottomOf="@id/club_choose"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textAlignment="center"
                    android:text="@string/fc_barcelona"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_size_large" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/separator"
            style="@style/Separator.Vertical"
            android:layout_marginLeft="@dimen/margin_settings"
            android:layout_marginRight="@dimen/margin_settings"
            android:layout_marginTop="@dimen/margin_general"
            app:layout_constraintTop_toBottomOf="@id/club_choose_cardview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/club_favourite_cardview"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_general"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/club_favourite"
                    style="@style/Text.ExtraLarge.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite_team"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/club_button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_smallish"
                    app:layout_constraintTop_toBottomOf="@id/club_favourite"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textAlignment="center"
                    android:text="@string/fc_barcelona"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_size_large" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>